# geom-algo-segmentation

./: CMakeLists.txt
data/: cube.off  cube_save.off  home-original.off  home-remeshed.off  horse-save.off  horse.off  nefertiti.off  obstacles.off  output_aires.off  pig.off  robot_marker.off  skull.off  zone_marche.off  zone_portee.off
output/: beetle_Area_Map.off  beetle_Normal_Map.off  cube-bruit-0_LissageFacteurDiffusion_100_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_100_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_1_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_1_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_200_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_200_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_2_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_2_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_3_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_3_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_40_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_40_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_4_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_4_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_5_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_5_0.500000.off  cube-bruit-0_LissageFacteurDiffusion_6_0.330000.off  cube-bruit-0_LissageFacteurDiffusion_6_0.500000.off  (+238 more)
src/: CMakeCache.txt  CMakeLists.txt  main.cpp
src/geomAlgoLib/: CMakeLists.txt  batch_renderer.hpp  example_archive_uncommented.cpp  example_archive_uncommented.hpp  myAlgo.cpp  myAlgo.hpp  myOldAlgo.cpp  myOldAlgo.hpp  types.hpp
(+7 files in other folders)
